--- a/style.css
+++ b/style.css
@@ -51,12 +51,20 @@ body{
     margin-left: 250px;
     margin-right: 200px;
 }
+.placecolor::placeholder{
+    color: #a03841;
+
+}
 
 /* nav recherche */
 .input-border {
     border: 1px solid #a1393a;      
     width: 192px;
     height: 31px;
+}
+
+.nav-link{
+    color: #a03841;
 }
 .recherche{
     display: flex;
@@ -86,15 +94,6 @@ body{
     margin-top: 58px;
     margin-bottom: 45px;
 }
-
-.colonne{
-    display: flex;
-    justify-content: center;
-
-    margin-right: 0px;
-    margin-left: 5px;
-    
-}
 h5{
     display: flex;
     justify-content: center;
@@ -122,11 +121,7 @@ h5{
 .card-body{
     background-color: #c2c57e;
 }
+
 .double1{
     margin-top: 47px;
-    margin-right: 6.5px;
-}
-.double2{
-    margin-top: 47px;
-    margin-left: 6.5px;
 }
